# Understanding-Regional-Filter-Lists-Efficacy-and-Impact-

./: ARTIFACT-EVALUATION.md  README.md  requirements.txt
01_MultiCrawl_(Framework)/: .gitignore  Commander_extract_Subpages.py  CrawlerChrome.py  CrawlerOpenWPM.py  DBOps.py  DataPreProcessing_is_tracker.py  Ops.py  PushOps.py  QueueManager.py  README.md  cookiepedia.py  custom_command.py  parser.py  plotp8.py  re2.py  req-install-sh.md  setup.py  url.txt
01_MultiCrawl_(Framework)/openwpm/: js_instrumentation.py
02_Measurement_Data/: README.md
03_Data_Processing_SQLs/: 4.1_Measurement_Metadata.sql  4.2_first_and_third_parties.sql  4.3_Known_Tracker.sql  4.4_Result_Table.sql  4.6_Tracking_Requests_per_profile_list.sql  README.md  push2bigquery.py  tracker_overview.sql  tracker_per_filterlist.sql
04_Plots_and_Statistics/: Figure 10 - tracker_per_country.ipynb  Figure 11 + 12 + 13 - rule_usage.ipynb  Figure 14 - runtime_analysis.ipynb  Figure 2 - github_commit_plot.ipynb  Figure 3 - justdomains_comparison.ipynb  Figure 4 - combining_lists.ipynb  Figure 5 + 6 - filterlist_fraction_of_identified_TR.ipynb  Figure 7 - effect_user_location.ipynb  Figure 8 - tracker_on_category.ipynb  README.md
04_Plots_and_Statistics/Filterlist/: all_easylist.txt  cluster.py  crawl_filterlists.py  filter_list_plots.py  lists.json  (+3 more)
04_Plots_and_Statistics/runtime/: Cargo.toml  Germany_sanitized.txt  Indian_sanitized.txt  Israel_sanitized.txt  Japanese_sanitized.txt  Scandinavia_sanitized.txt  VAE_sanitized.txt  runtime_analysis.ipynb
04_Plots_and_Statistics/runtime/src/: main.rs
(+123 files in other folders)
