[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adblock = "0.8.7"
csv = "1.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
threadpool = "1.8.1"
memory-stats = "1.0.0"
sysinfo = "0.21.1"
rand = "0.8"
indicatif = "0.16"
